--- a/python/OpenCV수업2/OpenCV_008_얼굴탐지하기.ipynb
+++ b/python/OpenCV수업2/OpenCV_008_얼굴탐지하기.ipynb
@@ -358,19 +358,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cvlib as cv\n",
     "import cv2 \n",
-    "img = cv2.imread('images/01.JPG')\n",
+    "import numpy as np\n",
+    "img = cv2.imread('images/02.jpg')\n",
     "\n",
     "faces, conf = cv.detect_face(img)\n",
     "for i in range(len(faces)):\n",
     "    top_left = (faces[i][0], faces[i][1])\n",
     "    bottom_right = (faces[i][2], faces[i][3])\n",
     "    cv2.rectangle(img, top_left, bottom_right, (0, 0, 255), 5)\n",
+    "\n",
+    "    # 행(y)의 범위, 열(x)의 범위\n",
+    "    sub_img = img[faces[i][1]:faces[i][3], faces[i][0]:faces[i][2]] \n",
+    "    # 잘린 얼굴 모자이크하기\n",
+    "    kernel = np.ones((10, 10)) / 100\n",
+    "    # 모자이크 영역\n",
+    "    sub_img = cv2.filter2D(sub_img, -1, kernel)\n",
+    "    # 기존 이미지에 모자이크 한 사진 집어넣기\n",
+    "    img[faces[i][1]:faces[i][3], faces[i][0]:faces[i][2]] = sub_img\n",
+    "\n",
+    "# 전체 영역 모자이크\n",
+    "# 모자이크의 정도\n",
+    "# kernel = np.ones((10, 10)) / 100\n",
+    "# 모자이크 영역\n",
+    "# img = cv2.filter2D(img, -1, kernel)\n",
     "\n",
     "cv2.imshow('seongsu', img)\n",
     "cv2.waitKey(0)\n",
@@ -379,14 +395,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "사용자에 의해서 영상이 종료\n"
+     "ename": "error",
+     "evalue": "OpenCV(4.10.0) /Users/xperience/GHA-Actions-OpenCV/_work/opencv-python/opencv-python/opencv/modules/imgproc/src/filter.dispatch.cpp:1528: error: (-215:Assertion failed) !_src.empty() in function 'filter2D'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 42\u001b[0m\n\u001b[1;32m     40\u001b[0m        sub_img \u001b[38;5;241m=\u001b[39m frame[faces[i][\u001b[38;5;241m1\u001b[39m]:faces[i][\u001b[38;5;241m3\u001b[39m], faces[i][\u001b[38;5;241m0\u001b[39m]:faces[i][\u001b[38;5;241m2\u001b[39m]] \n\u001b[1;32m     41\u001b[0m        kernel \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mones((\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m10\u001b[39m)) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m100\u001b[39m\n\u001b[0;32m---> 42\u001b[0m        sub_img \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfilter2D\u001b[49m\u001b[43m(\u001b[49m\u001b[43msub_img\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkernel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     43\u001b[0m        frame[faces[i][\u001b[38;5;241m1\u001b[39m]:faces[i][\u001b[38;5;241m3\u001b[39m], faces[i][\u001b[38;5;241m0\u001b[39m]:faces[i][\u001b[38;5;241m2\u001b[39m]] \u001b[38;5;241m=\u001b[39m sub_img\n\u001b[1;32m     45\u001b[0m cv2\u001b[38;5;241m.\u001b[39mimshow(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvideo\u001b[39m\u001b[38;5;124m'\u001b[39m, frame)\n",
+      "\u001b[0;31merror\u001b[0m: OpenCV(4.10.0) /Users/xperience/GHA-Actions-OpenCV/_work/opencv-python/opencv-python/opencv/modules/imgproc/src/filter.dispatch.cpp:1528: error: (-215:Assertion failed) !_src.empty() in function 'filter2D'\n"
      ]
     },
     {
@@ -403,9 +423,12 @@
    ],
    "source": [
     "import cv2\n",
+    "import cvlib as cv\n",
+    "import numpy as np\n",
     "\n",
     "cap = cv2.VideoCapture(0)\n",
     "cnt = 0\n",
+    "blur = False\n",
     "\n",
     "while True:\n",
     "    ch, frame = cap.read()\n",
@@ -420,7 +443,6 @@
     "        bottom_right = (faces[i][2], faces[i][3])\n",
     "        cv2.rectangle(frame, top_left, bottom_right, (0, 0, 255), 5)\n",
     "\n",
-    "    \n",
     "    key = cv2.waitKey(33)\n",
     "    if key == ord('q'):\n",
     "        print('사용자에 의해서 영상이 종료')\n",
@@ -434,16 +456,16 @@
     "            params = [cv2.IMWRITE_PNG_COMPRESSION, 0] # 압축 속성\n",
     "        )\n",
     "\n",
-    "    # if key == ord('e'):\n",
-    "    #     blur = not blur\n",
-    "    \n",
-    "    # if blur:\n",
-    "    #     for i in range(len(faces)):\n",
-    "    #         sub_frame = frame[faces[i][1]:faces[i][3], faces[i][0]:faces[i][2]]\n",
-    "    #         kernel = np.ones((20,20)) / 400\n",
-    "    #         sub_frame = cv2.filter2D(sub_frame, -1, kernel)\n",
-    "    #         frame[faces[i][1]:faces[i][3], faces[i][0]:faces[i][2]] = sub_frame\n",
+    "    if key == ord('e'): # 클릭하면 모자이크, 다시 클릭하면 모자이크 해제\n",
+    "       blur = not blur \n",
     "\n",
+    "    if blur:\n",
+    "       for i in range(len(faces)):\n",
+    "           sub_img = frame[faces[i][1]:faces[i][3], faces[i][0]:faces[i][2]] \n",
+    "           kernel = np.ones((10, 10)) / 100\n",
+    "           sub_img = cv2.filter2D(sub_img, -1, kernel)\n",
+    "           frame[faces[i][1]:faces[i][3], faces[i][0]:faces[i][2]] = sub_img\n",
+    "        \n",
     "    cv2.imshow('video', frame)\n",
     "cap.release()\n",
     "cv2.destroyAllWindows()"
